--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ajv": "^6.4.0",
     "core-js": "^2.5.4",
     "editorconfig-tools": "^0.1.1",
+    "file-saver": "^2.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.2",
     "lodash": "^4.17.11",
@@ -67,6 +68,8 @@
     "@angular/cli": "^7.1.0",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
+    "@angularclass/hmr": "^2.1.3",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -78,12 +81,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less-bundle-promise": "^1.0.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "less-bundle-promise": "^1.0.7",
-    "@angularclass/hmr": "^2.1.3"
+    "typescript": "~2.9.2"
   },
   "types": [
     "lodash"
